srcs/tester/base/vector/pop_back/log.txt
./base/vector/pop_back/patched.cpp:7:2: error: use of undeclared identifier 'ft'
 ft::vector<int> myvector;
 ^
./base/vector/pop_back/patched.cpp:9:2: error: use of undeclared identifier 'myvector'
 myvector.push_back (100);
 ^
./base/vector/pop_back/patched.cpp:10:2: error: use of undeclared identifier 'myvector'
 myvector.push_back (200);
 ^
./base/vector/pop_back/patched.cpp:11:2: error: use of undeclared identifier 'myvector'
 myvector.push_back (300);
 ^
./base/vector/pop_back/patched.cpp:13:10: error: use of undeclared identifier 'myvector'
 while (!myvector.empty())
         ^
./base/vector/pop_back/patched.cpp:15:7: error: use of undeclared identifier 'myvector'
 sum+=myvector.back();
      ^
./base/vector/pop_back/patched.cpp:16:2: error: use of undeclared identifier 'myvector'
 myvector.pop_back();
 ^
7 errors generated.
